Fix database URL parsing for Render.com deployment and add unit tests
- Add DatabaseUrlEnvironmentPostProcessor to parse DATABASE_URL environment variable
- Support both DATABASE_URL and DB_HOST formats from cloud providers
- Add comprehensive unit tests for improved code coverage
- Fix TenantContext method calls in test files
- Add spring.factories configuration for EnvironmentPostProcessor